--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "node-emoji": "^1.8.1",
     "node-env-file": "^0.1.8",
     "request": "^2.88.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
+    "colors": "^1.3.3",
     "minimist": "^1.2.0"
   }
 }
