--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "cli-ma": "npx babel-node index.js"
-  },
-  "author": "",
+  "author": "Leonardo Almeida",
   "license": "ISC",
   "dependencies": {
     "node-emoji": "^1.8.1",
