added bin file + refactored cli-app flow

--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "frontmen-weather",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "",
   "main": "index.js",
   "author": "Leonardo Almeida",
   "license": "ISC",
   "preferGlobal": true,
+  "bin": {
+    "frontmen-weather": "bin/frontmen-weather"
+  },
   "dependencies": {
     "node-emoji": "^1.8.1",
     "node-env-file": "^0.1.8",
