--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "frontmen-weather",
-  "version": "1.0.6",
+  "name": "frontmenweather",
+  "version": "1.0.7",
   "description": "",
   "main": "index.js",
   "author": "Leonardo Almeida",
   "license": "ISC",
   "preferGlobal": true,
   "bin": {
-    "frontmen-weather": "./bin/frontmen-weather"
+    "frontmenweather": "./bin/frontmenweather"
   },
   "dependencies": {
     "node-emoji": "^1.8.1",
