--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "preferGlobal": true,
   "bin": {
-    "frontweather": "./bin/frontweather"
+    "frontweather": "./bin/frontweather.js"
   },
   "dependencies": {
     "node-emoji": "^1.8.1",
