--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "frontweather",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "",
-  "main": "index.js",
   "author": "Leonardo Almeida",
   "license": "ISC",
   "preferGlobal": true,
+  "engines": {
+    "node": ">=7"
+  },
   "bin": {
     "frontweather": "./bin/frontweather.js"
   },
